--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<a href="demo_soft.exe" download="my-app">
+	<a href="syd_school" download="my-app">
 		Download
 	</a>
-	<p>Download Software</p>
+	<p>Download apk</p>
 
-	<a href="demo.zip" class="btn-2" download="my-zip-file">
+	<a href="syd.zip" class="btn-2" download="my-zip-file">
 		Download
 	</a>
 	<p>Download Zip file</p>
